made it so tests actually run

--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,11 @@
 <body>
   <div id='mocha'></div>
   <script src='../vendor/loader.js'></script>
-  <script src='../dist/thing.amd.js'></script>
+  <script src='../bower_components/jquery/jquery.js'></script>
+  <script src='../bower_components/handlebars/handlebars.js'></script>
+  <script src='../bower_components/ember/ember.js'></script>
+  <script src='../bower_components/ember-resolver/dist/ember-resolver.js'></script>
+  <script src='../dist/ember-test-helpers.amd.js'></script>
   <script src='vendor/assert.js'></script>
   <script src='vendor/mocha.js'></script>
   <script>
